--- a/src/views/pages/blocks/_commons/header.pug
+++ b/src/views/pages/blocks/_commons/header.pug
@@ -12,6 +12,7 @@ section.header
         li.nav__item Works
         li.nav__item People say
         li.nav__item Contact
+        li.nav__item Shmontact
 
   .header__main
     h2.header__subtitle.subtitle We Are Awesome Creative Agency
