main content constructing

--- a/src/views/blocks/_commons/header.pug
+++ b/src/views/blocks/_commons/header.pug
@@ -1,9 +1,9 @@
 section.header
-  .header__wrapper.wrapper
-    h1.header__title Хедер
-    .header__logo
+  .section-header__wrapper.wrapper
+    h2.section-header__title Хедер
+    .section-header__logo
       svg(width="10" height="10").header__logo-svg Логотип
-    nav.header__navbar
+    nav.section-header__navbar
       ul.nav__list
         li.nav__item Home
         li.nav__item About
@@ -12,9 +12,8 @@ section.header
         li.nav__item Works
         li.nav__item People say
         li.nav__item Contact
-        li.nav__item Shmontact
 
-  .header__main
+  .section-header__main
     h2.header__subtitle.subtitle We Are Awesome Creative Agency
     p.header__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
     button.header__btn.btn Learn more
