--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -2,4 +2,11 @@ extends ../base.layout.pug
 
 block content
   main.index-page
-    include blocks/_commons/header
+    include ../blocks/_commons/header
+    include ../blocks/index-page/about
+    include ../blocks/index-page/expertise
+    include ../blocks/index-page/team
+    include ../blocks/index-page/works
+    include ../blocks/index-page/testimonials
+    include ../blocks/index-page/contact
+    include ../blocks/_commons/footer
