styling is in progress, header

--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -45,3 +45,7 @@ img {
   margin-left: -50vw;
   margin-right: -50vw;
 }
+
+.wrapper {
+  background-image: linear-gradient(to right, #09052f 0%, #311d5e 100%);
+}
