--- a/src/views/blocks/_commons/header.pug
+++ b/src/views/blocks/_commons/header.pug
@@ -12,9 +12,8 @@ section.header
         li.nav__item Works
         li.nav__item People say
         li.nav__item Contact
-
-  .section-header__main
-    h2.header__subtitle.subtitle We Are Awesome Creative Agency
-    p.header__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-    button.header__btn.btn Learn more
-    .dotnav Dot navigation
+    .header__main.wrapper
+      h2.header__subtitle.subtitle We Are Awesome Creative Agency
+      p.header__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+      button.header__btn.btn Learn more
+      .dotnav Dot navigation
