--- a/src/views/blocks/index-page/contact.pug
+++ b/src/views/blocks/index-page/contact.pug
@@ -1,5 +1,5 @@
 .section-contact
-  .section-contact__wrapper.wrapper
+  .section-contact__wrapper
     form.section-contact__form
       .section-contact__contact
         h2.contact__title Give us a good news
