--- a/src/views/blocks/index-page/works.pug
+++ b/src/views/blocks/index-page/works.pug
@@ -1,5 +1,5 @@
 .section-works
-  .section-works__wrapper.wrapper
+  .section-works__wrapper
     h2.section-works__title Our works
     a.section-works__link(href="#") See all project in dribble
     ul.section-works__list
