--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,4 +4,5 @@
 @import './layout/mixins.scss';
 @import './layout/base.scss';
 
-@import './blocks/footer.scss';
+@import './blocks/_commons/footer.scss';
+@import './blocks/_commons/header.scss';
