--- a/src/views/blocks/index-page/about.pug
+++ b/src/views/blocks/index-page/about.pug
@@ -1,5 +1,5 @@
 section.about
-  .section-about__wrapper.wrapper
+  .section-about__wrapper
     h2.section-about__title Основной контент
     .section-about__about
       h3.about__about.title Our story
@@ -10,7 +10,7 @@ section.about
       |Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
       button.about__about-btn.btn Learn more
 
-    .section-about__video
+    .section-about__video.wrapper
       h3.about__video-title.title Видео
       span.about__video-text Watch our story
       svg(width="10px" height="10px").about__video-svg
