--- a/src/views/blocks/index-page/expertise.pug
+++ b/src/views/blocks/index-page/expertise.pug
@@ -1,5 +1,5 @@
 .section-expertise
-  .section-expertise__wrapper.wrapper
+  .section-expertise__wrapper
     h2.section-expertise__title Expertise
     .section-expertise__subtitle Lorem ipsum dolor sit amet proin gravida nibh vel velit
     ul.expertise__list
