fixing code issues

--- a/src/views/blocks/_commons/footer.pug
+++ b/src/views/blocks/_commons/footer.pug
@@ -1,4 +1,4 @@
-.section-footer
+section.section-footer
   .section-footer__wrapper.wrapper
     h2.section-footer__title.title Footer
     ul.section-footer__list-items
