--- a/src/views/blocks/_commons/header.pug
+++ b/src/views/blocks/_commons/header.pug
@@ -1,19 +1,18 @@
-section.header
-  .section-header__wrapper.wrapper
+section.section-header
+  nav.section-header__navbar.wrapper
     h2.section-header__title Хедер
     .section-header__logo
       svg(width="10" height="10").header__logo-svg Логотип
-    nav.section-header__navbar
-      ul.nav__list
-        li.nav__item Home
-        li.nav__item About
-        li.nav__item Expertise
-        li.nav__item Teams
-        li.nav__item Works
-        li.nav__item People say
-        li.nav__item Contact
-    .header__main.wrapper
-      h2.header__subtitle.subtitle We Are Awesome Creative Agency
-      p.header__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-      button.header__btn.btn Learn more
-      .dotnav Dot navigation
+    ul.nav__list
+      li.nav__item Home
+      li.nav__item About
+      li.nav__item Expertise
+      li.nav__item Teams
+      li.nav__item Works
+      li.nav__item People say
+      li.nav__item Contact
+  .section-header__main
+    h2.header__subtitle.subtitle We Are Awesome Creative Agency
+    p.header__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+    button.header__btn.btn Learn more
+    .dotnav Dot navigation
