--- a/src/views/blocks/index-page/team.pug
+++ b/src/views/blocks/index-page/team.pug
@@ -1,4 +1,4 @@
-.section-team
+section.section-team
   .section-team__wrapper.wrapper
     h2.section-team__title Meet our amazing team
     p.section-team__text Lorem ipsum dolor sit amet proin gravida nibh vel velit
@@ -6,16 +6,21 @@
       li.section-team__item
         p.team__name Semf Ucuk
         span.team__description Ceo & Founder
-        img.team__img
       li.section-team__item
         p.team__name Dik Adalin
         span.team__description Engineering
-        img.team__img
       li.section-team__item
         p.team__name Jeng Kol
         span.team__description Designer
-        img.team__img
       li.section-team__item
         p.team__name Pet Romak
         span.team__description Marketing
+    ul.section-team__userpic
+      li.section-team__item
+        img.team__img
+      li.section-team__item
+        img.team__img
+      li.section-team__item
+        img.team__img
+      li.section-team__item
         img.team__img
