--- a/src/views/blocks/index-page/testimonials.pug
+++ b/src/views/blocks/index-page/testimonials.pug
@@ -1,4 +1,4 @@
-.section-testimonials
+section.section-testimonials
   .section-testimonials__wrapper.wrapper
     h2.section-testimonials__title “
     ul.section-testimonials__list
