--- a/src/views/blocks/index-page/about.pug
+++ b/src/views/blocks/index-page/about.pug
@@ -1,16 +1,15 @@
-section.about
+section.section-about
   .section-about__wrapper
-    h2.section-about__title Основной контент
+    h2.section-about__title Our story
     .section-about__about
-      h3.about__about.title Our story
       svg(width="10px" height="10px").about__svg
-      article.about__about-text
+      article.section-about__about-text
       |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus
       br
       |Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-      button.about__about-btn.btn Learn more
+      button.section-about__about-btn.btn Learn more
 
     .section-about__video.wrapper
-      h3.about__video-title.title Видео
-      span.about__video-text Watch our story
-      svg(width="10px" height="10px").about__video-svg
+      h3.section-about__video-title.title Видео
+      span.section-about__video-text Watch our story
+      svg(width="10px" height="10px").section-about__video-svg
