--- a/src/views/blocks/index-page/contact.pug
+++ b/src/views/blocks/index-page/contact.pug
@@ -1,4 +1,4 @@
-.section-contact
+section.section-contact
   .section-contact__wrapper
     form.section-contact__form
       .section-contact__contact
