--- a/src/views/blocks/index-page/expertise.pug
+++ b/src/views/blocks/index-page/expertise.pug
@@ -1,4 +1,4 @@
-.section-expertise
+section.section-expertise
   .section-expertise__wrapper
     h2.section-expertise__title Expertise
     .section-expertise__subtitle Lorem ipsum dolor sit amet proin gravida nibh vel velit
