css names changing

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,5 +4,5 @@
 @import './layout/mixins.scss';
 @import './layout/base.scss';
 
-@import './blocks/_commons/footer.scss';
-@import './blocks/_commons/header.scss';
+@import './blocks/index-page/footer.scss';
+@import './blocks/index-page/header.scss';
