--- a/src/views/blocks/index-page/about.pug
+++ b/src/views/blocks/index-page/about.pug
@@ -1,15 +1,10 @@
 section.section-about
-  .section-about__wrapper
+  .section-about__wrapper.wrapper
     h2.section-about__title Our story
-    .section-about__about
+    .section-about__about.about
       svg(width="10px" height="10px").about__svg
-      article.section-about__about-text
+      article.about__text
       |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus
       br
       |Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-      button.section-about__about-btn.btn Learn more
-
-    .section-about__video.wrapper
-      h3.section-about__video-title.title Видео
-      span.section-about__video-text Watch our story
-      svg(width="10px" height="10px").section-about__video-svg
+      button.about__btn.btn Learn more
