--- a/src/views/blocks/index-page/contact.pug
+++ b/src/views/blocks/index-page/contact.pug
@@ -1,14 +1,14 @@
 section.section-contact
   .section-contact__wrapper
     form.section-contact__form
-      .section-contact__contact
+      .section-contact__contact.contact
         h2.contact__title Give us a good news
         input(type="text" id="name" placeholder="Name").contact__input
         input(type="email" id="email" placeholder="Email").contact__input
         input(type="text" id="subject" placeholder="Subject").contact__input
         input(type="textarea" id="message" placeholder="Your message").contact__input
         button.contact__btn.btn Submit
-      .section-contact__clients
+      .section-contact__clients.clients
         h2.clients__title Our happy clients
         ul.clients__list
           li.clients__item
