--- a/src/views/blocks/index-page/footer.pug
+++ b/src/views/blocks/index-page/footer.pug
@@ -1,47 +1,47 @@
 section.section-footer
   .section-footer__wrapper.wrapper
-    h2.section-footer__title.title Footer
-    ul.section-footer__list-items
-      li.section-footer__item-logo
+    h2.visually-hidden Footer
+    ul.section-footer__items
+      li.section-footer__logo.logo
         svg(width="10" height="10").logo__svg
         p.logo__text
           |lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit
-      li.section-footer__item-contacts
+      li.section-footer__contacts.contacts
         p.contacts__title Our studio
         p.contacts__address
           |Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat 11480 - Indonesia
         p.contacts__phone
           |(+62) 21-2224 3333
-      li.section-footer__item-socials
+      li.section-footer__socials.socials
         p.socials__title Stay in touch
          form.socials__form(action="")
-          input(type="email" id="socials-email" placeholder="Subscribe our newsletter").socials-input
+          input(type="email" id="socials-email" placeholder="Subscribe our newsletter").socials__input
           button.socials__btn Submit
-        ul.section-footer__socials
-          li.section-footer_socials-item
+        ul.socials__links
+          li.socials__item
             a(href="#").socials__link facebook
               svg(width="10" height="10").socials__svg
-          li.section-footer_socials-item
+          li.socials__item
             a(href="#").socials__link twitter
               svg(width="10" height="10").socials__svg
-          li.section-footer_socials-item
+          li.socials__item
             a(href="#").socials__link dribble
               svg(width="10" height="10").socials__svg
-          li.section-footer_socials-item
+          li.socials__item
             a(href="#").socials__link instagram
               svg(width="10" height="10").socials__svg
-          li.section-footer_socials-item
+          li.socials__item
             a(href="#").socials__link google+
               svg(width="10" height="10").socials__svg
-          li.section-footer_socials-item
+          li.socials__item
             a(href="#").socials__link youtube
               svg(width="10" height="10").socials__svg
     .section-footer__bottom
-      ul.info__list
-        li.info__item
-          a.info__link(href="#") Help
-        li.info__item
-          a.info__link(href="#") Terms & conditions
-        li.info__item
-          a.info__link(href="#") Privacy
-      p.copyright__text Copyright © 2015 - Tajem Creative
+      ul.section-footer__info.bottom
+        li.bottom__item
+          a.bottom__link(href="#") Help
+        li.bottom__item
+          a.bottom__link(href="#") Terms & conditions
+        li.bottom__item
+          a.bottom__link(href="#") Privacy
+      p.section-footer__copyright Copyright © 2015 - Tajem Creative
