--- a/src/views/blocks/index-page/testimonials.pug
+++ b/src/views/blocks/index-page/testimonials.pug
@@ -1,34 +1,34 @@
 section.section-testimonials
   .section-testimonials__wrapper.wrapper
-    h2.section-testimonials__title “
-    ul.section-testimonials__list
-      li.section-testimonials__item
+    h2.visually-hidden Testimonials
+    ul.section-testimonials__list.testimonials
+      li.testimonials__item
         span.testimonials__text
           |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.
         p.testimonials__credits Jane Galadriel
           span.testimonials__job  Ceo tengcurep
-      li.section-testimonials__item
+      li.testimonials__item
         span.testimonials__text
           |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.
         p.testimonials__credits Arven Eveninigstar
           span.testimonials__job  Designer
-      li.section-testimonials__item
+      li.testimonials__item
         span.testimonials__text
           |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.
         p.testimonials__credits Aragorn Arathorn
           span.testimonials__job  Teamlead
-      li.section-testimonials__item
+      li.testimonials__item
         span.testimonials__text
           |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.
         p.testimonials__credits Gimly Gloyn
           span.testimonials__job  Director
-      li.section-testimonials__item
+      li.testimonials__item
         span.testimonials__text
           |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.
         p.testimonials__credits Frodo Baggins
           span.testimonials__job  Web developer
-    ul.section-testimonials__userpic
-      li.section-testimonials__userpic__item
+    ul.testimonials__userpic
+      li.userpic__item
         img.userpic-img(src="", alt="")
       li.userpic__item
         img.userpic-img(src="", alt="")
