--- a/src/views/blocks/index-page/team.pug
+++ b/src/views/blocks/index-page/team.pug
@@ -1,6 +1,6 @@
 section.section-team
   .section-team__wrapper.wrapper
-    h2.section-team__title Meet our amazing team
+    h2.section-team__title.title Meet our amazing team
     p.section-team__text Lorem ipsum dolor sit amet proin gravida nibh vel velit
     ul.section-team__list
       li.section-team__item
