header styling in progress

--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -46,6 +46,17 @@ img {
   margin-right: -50vw;
 }
 
-.wrapper {
+.title {
+  font-family: "Playfair Display";
+  font-size: 32px;
+  font-weight: 400;
+  letter-spacing: 0.32px;
+  }
 
+.text {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px;
+  letter-spacing: 0.7px;
 }
