--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -6,3 +6,11 @@
 
 @import './blocks/index-page/footer.scss';
 @import './blocks/index-page/header.scss';
+@import './blocks/index-page/about.scss';
+@import './blocks/index-page/contact.scss';
+@import './blocks/index-page/advantages.scss';
+@import './blocks/index-page/team.scss';
+@import './blocks/index-page/testimonials.scss';
+@import './blocks/index-page/works.scss';
+
+@import url('https://fonts.googleapis.com/css?family=Hammersmith+One|Playfair+Display:400,700|Roboto&display=swap');
