--- a/src/views/blocks/index-page/contact.pug
+++ b/src/views/blocks/index-page/contact.pug
@@ -1,43 +1,42 @@
 section.section-contact
-  .section-contact__wrapper
-    form.section-contact__form
-      .section-contact__contact.contact
-        h2.contact__title Give us a good news
-        input(type="text" id="name" placeholder="Name").contact__input
-        input(type="email" id="email" placeholder="Email").contact__input
-        input(type="text" id="subject" placeholder="Subject").contact__input
-        input(type="textarea" id="message" placeholder="Your message").contact__input
-        button.contact__btn.btn Submit
-      .section-contact__clients.clients
-        h2.clients__title Our happy clients
-        ul.clients__list
-          li.clients__item
-            a(href="#").clients__link Zara
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Mango
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Barneys Newyork
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Gucci
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Calvin Klein
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Nike
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Converse
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Puma
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Levi's
-              svg(width="10" height="10")
-          li.clients__item
-            a(href="#").clients__link Billa bong
-              svg(width="10" height="10")
+  .section-contact__wrapper.wrapper
+    form.section-contact__form.form
+      h2.form__title.title Give us a good news
+      input(type="text" id="name" placeholder="Name").form__input
+      input(type="email" id="email" placeholder="Email").form__input
+      input(type="text" id="subject" placeholder="Subject").form__input
+      input(type="textarea" id="message" placeholder="Your message").form__input
+      button.form__btn.btn Submit
+    .section-contact__clients.clients
+      h2.clients__title Our happy clients
+      ul.clients__list
+        li.clients__item
+          a(href="#").clients__link Zara
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Mango
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Barneys Newyork
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Gucci
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Calvin Klein
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Nike
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Converse
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Puma
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Levi's
+            svg(width="10" height="10").clients__svg
+        li.clients__item
+          a(href="#").clients__link Billa bong
+            svg(width="10" height="10").clients__svg
