--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -1,8 +1,42 @@
-.header {
+.section-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
-  background-image: url('../../images/header.png')
+  background-image: linear-gradient(to right, #09052f 0%, #311d5e 100%);
+  color: #ffffff;
 }
 
-.section-header__title {
-  font-size: 0;
+.section-header__navbar {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.nav__list {
+  display: flex;
+  list-style: none;
+  margin-right: -8px;
+  font-family: "Roboto";
+  font-size: 13px;
+  font-weight: 400;
+  text-transform: uppercase;
+  // color: #00e0d0;
+  letter-spacing: 0.33px;
+  letter-spacing: 0.33px;
+}
+
+.nav__item {
+  margin-right: 8px;
+}
+
+.section-header__main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.main__title {
+  color: #ffffff;
 }
