--- a/src/views/blocks/index-page/team.pug
+++ b/src/views/blocks/index-page/team.pug
@@ -2,25 +2,21 @@ section.section-team
   .section-team__wrapper.wrapper
     h2.section-team__title.title Meet our amazing team
     p.section-team__text Lorem ipsum dolor sit amet proin gravida nibh vel velit
-    ul.section-team__list
-      li.section-team__item
+    ul.section-team__list.team
+      li.team__item
         p.team__name Semf Ucuk
         span.team__description Ceo & Founder
-      li.section-team__item
+        img.team__img
+      li.team__item
         p.team__name Dik Adalin
         span.team__description Engineering
-      li.section-team__item
+        img.team__img
+      li.team__item
         p.team__name Jeng Kol
         span.team__description Designer
-      li.section-team__item
+        img.team__img
+      li.team__item
         p.team__name Pet Romak
         span.team__description Marketing
-    ul.section-team__userpic
-      li.section-team__item
         img.team__img
-      li.section-team__item
-        img.team__img
-      li.section-team__item
-        img.team__img
-      li.section-team__item
-        img.team__img
+    button.section-team__button.btn We are hiring
