header styling is ready

--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -60,3 +60,16 @@ img {
   line-height: 24px;
   letter-spacing: 0.7px;
 }
+
+.btn {
+  padding: 15px;
+  box-sizing: border-box;
+  border: 1px solid #00e0d0;
+  text-decoration: none;
+  background-color: transparent;
+  font-family: "Hammersmith One";
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #00e0d0;
+}
