--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -3,14 +3,28 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  background-image: linear-gradient(to right, #09052f 0%, #311d5e 100%);
+  padding-bottom: 70px;
+  background-image:
+  linear-gradient(to right, rgba(#09052f, .8),
+  rgba(#311d5e, .8)),
+  url("/assets/images/header.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   color: #ffffff;
 }
 
 .section-header__navbar {
   display: flex;
   justify-content: space-between;
+  width: 940px;
+  margin: auto;
+  margin-top: 15px;
 
+}
+
+.logo__img {
+  width: 128px;
+  height: 50px;
 }
 
 .nav__list {
@@ -30,13 +44,43 @@
   margin-right: 8px;
 }
 
+.nav__link {
+  text-decoration: none;
+  color: white;
+}
+
 .section-header__main {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 940px;
+  margin: auto;
 }
 
 .main__title {
   color: #ffffff;
+}
+
+.main__text {
+  text-align: center;
+  margin-top: 52px;
+}
+
+.main__text::before {
+  content: '';
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+  width: 50px;
+  height: 1px;
+  background-color: #00e0d0;
+}
+
+.main__btn {
+  margin-top: 50px;
+}
+
+.main__dotnav {
+  margin-top: 127px;
 }
