--- a/src/views/blocks/index-page/header.pug
+++ b/src/views/blocks/index-page/header.pug
@@ -2,15 +2,23 @@ section.section-header
   nav.section-header__navbar.wrapper
     h2.visually-hidden Хедер
     .section-header__logo.logo
-      svg(width="10" height="10").logo__svg Логотип
+      picture.logo__img
+        img(src="./assets/images/logo.png")
     ul.nav__list
-      li.nav__item Home
-      li.nav__item About
-      li.nav__item Expertise
-      li.nav__item Teams
-      li.nav__item Works
-      li.nav__item People say
-      li.nav__item Contact
+      li.nav__item
+        a(href="#").nav__link Home
+      li.nav__item
+        a(href="#").nav__link About
+      li.nav__item
+        a(href="#").nav__link Expertise
+      li.nav__item
+        a(href="#").nav__link Teams
+      li.nav__item
+        a(href="#").nav__link Works
+      li.nav__item
+        a(href="#").nav__link People say
+      li.nav__item
+        a(href="#").nav__link Contact
   .section-header__main.main
     h2.main__title.title We Are Awesome Creative Agency
     p.main__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
