starting works block

--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -53,6 +53,14 @@ img {
   letter-spacing: 0.32px;
   }
 
+  .subtitle {
+    font-family: "Playfair Display";
+    font-size: 22px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1.1px;
+  }
+
 .text {
   font-family: Roboto;
   font-size: 14px;
