--- a/src/views/blocks/index-page/team.pug
+++ b/src/views/blocks/index-page/team.pug
@@ -1,22 +1,26 @@
 section.section-team
   .section-team__wrapper.wrapper
     h2.section-team__title.title Meet our amazing team
-    p.section-team__text Lorem ipsum dolor sit amet proin gravida nibh vel velit
+    p.section-team__text.text Lorem ipsum dolor sit amet proin gravida nibh vel velit
     ul.section-team__list.team
       li.team__item
         p.team__name Semf Ucuk
         span.team__description Ceo & Founder
-        img.team__img
+        picture.team__img
+          img(src="/assets/images/avatar.png")
       li.team__item
         p.team__name Dik Adalin
         span.team__description Engineering
-        img.team__img
+        picture.team__img
+          img(src="/assets/images/avatar.png")
       li.team__item
         p.team__name Jeng Kol
         span.team__description Designer
-        img.team__img
+        picture.team__img
+          img(src="/assets/images/avatar.png")
       li.team__item
         p.team__name Pet Romak
         span.team__description Marketing
-        img.team__img
-    button.section-team__button.btn We are hiring
+        picture.team__img
+          img(src="/assets/images/avatar.png")
+    button.section-team__btn.btn We are hiring
