--- a/src/views/blocks/index-page/video.pug
+++ b/src/views/blocks/index-page/video.pug
@@ -1,5 +1,7 @@
 section.section-video
-  .section-video.wrapper
-    h3.section-video__title.title Видео
-    span.section-video__text.text Watch our story
-    svg(width="10px" height="10px").section-video__svg
+  .section-video__wrapper.wrapper
+    h3.visually-hidden Видео
+    button.section-video__btn-text Watch our story
+    button.section-video__btn
+      picture.section-video__img
+        img(src="/assets/images/play.png")
