--- a/src/views/blocks/index-page/works.pug
+++ b/src/views/blocks/index-page/works.pug
@@ -5,38 +5,50 @@ section.section-works
     ul.section-works__list.works
       li.works__item
         a.works__link(href="#") 1
-          img.work__img
+          picture.work__img
+            img(src="/assets/images/1.png")
       li.works__item
         a.works__link(href="#") 2
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/2.png")
       li.works__item
         a.works__link(href="#") 3
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/3.png")
       li.works__item
         a.works__link(href="#") 4
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/4.png")
       li.works__item
         a.works__link(href="#") 5
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/1.png")
       li.works__item
         a.works__link(href="#") 6
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/2.png")
       li.works__item
         a.works__link(href="#") 7
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/3.png")
       li.works__item
         a.works__link(href="#") 8
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/4.png")
       li.works__item
         a.works__link(href="#") 9
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/1.png")
       li.works__item
         a.works__link(href="#") 10
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/2.png")
       li.works__item
         a.works__link(href="#") 11
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/3.png")
       li.works__item
         a.works__link(href="#") 12
-          img.works__img
+          picture.work__img
+            img(src="/assets/images/4.png")
     button.section-works__btn.btn Load more
