--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -56,6 +56,7 @@
   justify-content: center;
   width: 940px;
   margin: auto;
+  margin-top: 173px;
 }
 
 .main__title {
@@ -84,5 +85,32 @@
 }
 
 .main__dotnav {
+  padding: 0;
+  margin: 0;
   margin-top: 127px;
+}
+
+.main__item {
+  display: inline-block;
+  margin-left: 5px;
+  list-style: none;
+  flex-grow: 0;
+}
+
+.dotnav__btn {
+  padding: 0;
+  width: 10px;
+  height: 10px;
+  display: block;
+  overflow: hidden;
+  box-sizing: border-box;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid white;
+  font-size: 0;
+}
+
+.dotnav__btn--active {
+  background-color: #00e0d0;
+  border: transparent;
 }
