--- a/src/views/blocks/index-page/about.pug
+++ b/src/views/blocks/index-page/about.pug
@@ -1,10 +1,11 @@
 section.section-about
   .section-about__wrapper.wrapper
-    h2.section-about__title Our story
     .section-about__about.about
-      svg(width="10px" height="10px").about__svg
+      h2.section-about__title.subtitle Our story
       article.about__text
-      |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus
-      br
-      |Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+        |This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus
+        br
+        |Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
       button.about__btn.btn Learn more
+    picture.about__img
+      img(src="/assets/images/logo_color.png")
