--- a/src/views/blocks/index-page/advantages.pug
+++ b/src/views/blocks/index-page/advantages.pug
@@ -1,29 +1,35 @@
 section.section-advantages
   .section-advantages__wrapper
-    h2.section-advantages__title.title advantages
-    .section-advantages__subtitle.subtitle Lorem ipsum dolor sit amet proin gravida nibh vel velit
-    ul.section-advantages__list
+    h2.section-advantages__title.title Expertise
+    .section-advantages__subtitle Lorem ipsum dolor sit amet proin gravida nibh vel velit
+    ul.section-advantages__list.advantages
       li.advantages__item
         p.advantages__subtitle Web design & development
         span.advantages__text This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.
-        svg(with="20px" height="20px").advantages__svg
+        picture.advantages__img
+          img(src="/assets/images/screen.png")
       li.advantages__item
         p.advantages__subtitle Branding identity
         span.advantages__text This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.
-        svg(with="20px" height="20px").advantages__svg
+        picture.advantages__img
+          img(src="/assets/images/brush.png")
       li.advantages__item
         p.advantages__subtitle Mobile app
         span.advantages__text This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.
-        svg(with="20px" height="20px").advantages__svg
+        picture.advantages__img
+          img(src="/assets/images/mobile.png")
       li.advantages__item
         p.advantages__subtitle Search engine optimization
         span.advantages__text This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.
-        svg(with="20px" height="20px").advantages__svg
+        picture.advantages__img
+          img(src="/assets/images/pizza.png")
       li.advantages__item
         p.advantages__subtitle Game development
         span.advantages__text This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.
-        svg(with="20px" height="20px").advantages__svg
+        picture.advantages__img
+          img(src="/assets/images/game.png")
       li.advantages__item
         p.advantages__subtitle Made with love
         span.advantages__text This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.
-        svg(with="20px" height="20px").advantages__svg
+        picture.advantages__img
+          img(src="/assets/images/heart.png")
