--- a/src/views/blocks/index-page/header.pug
+++ b/src/views/blocks/index-page/header.pug
@@ -23,4 +23,12 @@ section.section-header
     h2.main__title.title We Are Awesome Creative Agency
     p.main__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
     button.main__btn.btn Learn more
-    .main__dotnav Dot navigation
+    ul.main__dotnav
+      li.main__item
+        button.dotnav__btn.dotnav__btn--active 1
+      li.main__item
+        button.dotnav__btn 2
+      li.main__item
+        button.dotnav__btn 3
+      li.main__item
+        button.dotnav__btn 4
