--- a/src/views/blocks/index-page/works.pug
+++ b/src/views/blocks/index-page/works.pug
@@ -1,7 +1,8 @@
 section.section-works
   .section-works__wrapper.wrapper
-    h2.section-works__title.title Our works
-    a.section-works__link(href="#") See all project in dribble
+    .section-works__info.info
+      h2.info__title.title Our works
+      a.info__link(href="#") See all project in dribble
     ul.section-works__list.works
       li.works__item
         a.works__link(href="#") 1
