--- a/src/assets/styles/blocks/index-page/advantages.scss
+++ b/src/assets/styles/blocks/index-page/advantages.scss
@@ -12,6 +12,7 @@
 .section-advantages__title {
   text-align: center;
   font-weight: 700;
+  margin-top: 0;
 }
 
 .section-advantages__subtitle {
@@ -45,12 +46,13 @@
 }
 
 .advantages__item {
-  width: 20%;
+  width: 33%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 66px;
-  margin-bottom: 79px;
+  box-sizing: border-box;
+  padding: 0 33px;
+  padding-bottom: 79px;
   text-align: center;
 }
 
@@ -58,6 +60,7 @@
   margin-top: 39px;
   margin-bottom: 0;
   width: 100%;
+  color: #413d4b;
   font-family: "Roboto";
   font-size: 14px;
   font-weight: 700;
@@ -74,4 +77,5 @@
 
 .advantages__text {
   margin-top: 25px;
+  color: #333333;
 }
