--- a/src/assets/styles/blocks/index-page/works.scss
+++ b/src/assets/styles/blocks/index-page/works.scss
@@ -37,10 +37,13 @@
 
 .info__link::after {
   content: '';
-  display: block;
-  background-image: url('assets/images/arrow.png');
-  width: 8px;
-  height: 13px;
+  display: inline-block;
+  border: solid #413d4b;
+  border-width: 0 1px 1px 0;
+  margin-left: 10px;
+  padding: 4px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
 }
 
 .section-works__list {
