--- a/src/views/blocks/index-page/testimonials.pug
+++ b/src/views/blocks/index-page/testimonials.pug
@@ -29,12 +29,12 @@ section.section-testimonials
           span.testimonials__job  Web developer
     ul.testimonials__userpic
       li.userpic__item
-        img.userpic-img(src="", alt="")
+        img.userpic-img(src="/assets/images/test-1.png")
       li.userpic__item
-        img.userpic-img(src="", alt="")
+        img.userpic-img(src="/assets/images/test-2.png")
       li.userpic__item
-        img.userpic-img(src="", alt="")
+        img.userpic-img(src="/assets/images/test-3.png")
       li.userpic__item
-        img.userpic-img(src="", alt="")
+        img.userpic-img(src="/assets/images/test-4.png")
       li.userpic__item
-        img.userpic-img(src="", alt="")
+        img.userpic-img(src="/assets/images/test-1.png")
