--- a/src/views/blocks/index-page/contact.pug
+++ b/src/views/blocks/index-page/contact.pug
@@ -12,10 +12,12 @@ section.section-contact
       ul.clients__list
         li.clients__item
           a(href="#").clients__link Zara
-            svg(width="10" height="10").clients__svg
+            svg(width="162" height="22").clients__svg
+              use(xlink:href="#Zara_Logo")
         li.clients__item
           a(href="#").clients__link Mango
-            svg(width="10" height="10").clients__svg
+            svg(width="138" height="22").clients__svg
+              use(xlink:href="#Mango_Logo")
         li.clients__item
           a(href="#").clients__link Barneys Newyork
             svg(width="10" height="10").clients__svg
