--- a/src/assets/styles/blocks/index-page/testimonials.scss
+++ b/src/assets/styles/blocks/index-page/testimonials.scss
@@ -72,15 +72,26 @@
   list-style: none;
 }
 
-// .testimonials__userpic::after{
-//   content: '';
-//   display: inline-block;
-//   border: solid #848485;
-//   border-width: 0 3px 3px 0;
-//   padding: 3px;
-//   transform: rotate(-45deg);
-//   -webkit-transform: rotate(-45deg);
-// }
+.testimonials__userpic::after{
+  content: '';
+  display: inline-block;
+  border: solid #848485;
+  border-width: 0 1px 1px 0;
+  padding: 7px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.testimonials__userpic::before{
+  content: '';
+  display: inline-block;
+  padding: 7px;
+  margin-right: 14px;
+  border: solid #848485;
+  border-width: 0 1px 1px 0;
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
 
 .userpic__item {
   margin-right: 14px;
