--- a/src/views/base.layout.pug
+++ b/src/views/base.layout.pug
@@ -10,3 +10,6 @@ html(lang="ru-RU")
   body
     block content
     block scripts
+
+      .visually-hidden
+        include ../svg_sprite/symbol/sprite.svg
