--- a/src/views/blocks/index-page/contact.pug
+++ b/src/views/blocks/index-page/contact.pug
@@ -5,7 +5,7 @@ section.section-contact
       input(type="text" id="name" placeholder="Name").form__input
       input(type="email" id="email" placeholder="Email").form__input
       input(type="text" id="subject" placeholder="Subject").form__input
-      input(type="textarea" id="message" placeholder="Your message").form__input
+      input(type="textarea" id="message" placeholder="Your message" height="200px").form__input.textarea__input
       button.form__btn.btn Submit
     .section-contact__clients.clients
       h2.clients__title Our happy clients
@@ -17,28 +17,36 @@ section.section-contact
         li.clients__item
           a(href="#").clients__link Mango
             svg(width="138" height="22").clients__svg
-              use(xlink:href="#Mango_Logo")
+              use(xlink:href="#Mango_logo")
         li.clients__item
           a(href="#").clients__link Barneys Newyork
-            svg(width="10" height="10").clients__svg
+            svg(width="154" height="41").clients__svg
+              use(xlink:href='#Barneys_New_York_Logo')
         li.clients__item
           a(href="#").clients__link Gucci
-            svg(width="10" height="10").clients__svg
+            svg(width="140" height="21").clients__svg
+              use(xlink:href='#Gucci_logo')
         li.clients__item
           a(href="#").clients__link Calvin Klein
-            svg(width="10" height="10").clients__svg
+            svg(width="151" height="24").clients__svg
+              use(xlink:href='#Calvin_klein_logo')
         li.clients__item
           a(href="#").clients__link Nike
-            svg(width="10" height="10").clients__svg
+            svg(width="95" height="34").clients__svg
+              use(xlink:href='#Nike_logo')
         li.clients__item
           a(href="#").clients__link Converse
-            svg(width="10" height="10").clients__svg
+            svg(width="113" height="69").clients__svg
+              use(xlink:href='#Converse_logo')
         li.clients__item
           a(href="#").clients__link Puma
-            svg(width="10" height="10").clients__svg
+            svg(width="114" height="56").clients__svg
+              use(xlink:href='#Puma_logo')
         li.clients__item
           a(href="#").clients__link Levi's
-            svg(width="10" height="10").clients__svg
+            svg(width="109" height="53").clients__svg
+              use(xlink:href='#Levis_logo')
         li.clients__item
           a(href="#").clients__link Billa bong
-            svg(width="10" height="10").clients__svg
+            svg(width="130" height="70").clients__svg
+              use(xlink:href='#Billabong')
